--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 		}
 		body::after {
 			content: "";
-			background-color: #F89406;
+			background-color: ##2c3e50;
 			background-size: cover cover;
 			opacity: 0.9;
 			top: 0;
@@ -27,10 +27,11 @@
         a:hover {color: #dddddd;}
         a {text-decoration:none;}
 		span.head_label{
-			background-color:rgba(51,51,51,0.7);
+			background-color:#000000;
 			padding:15px;
 			font-size:3vw;
 			color:#FFF;
 			width:auto;
 			float:none;
+			font-family: monospace, cursive;
 		}
