--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
  body {
 			font-family: monospace, cursive;
 			font-size:20px; 
-			color:#FFFFFF; 
+			color:#2c3e50; 
 			font-family:arial; 
 			text-align:center; 
 		}
